tests/compile/shader_modules/meshlet_payload.expected
#ifdef __clang__
In file included from meshlet_payload.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:6:
intrinsics_mesh.hpp:105:16: error: static assertion failed due to requirement '0U > 0': MeshletPayload MaxVertices must be > 0
  105 |         static_assert(MaxVertices > 0, "MeshletPayload MaxVertices must be > 0");
      |                       ^~~~~~~~~~~~~~~
meshlet_payload.cpp:41:53: note: in instantiation of template class 'rcgp::MeshletPayload<rcgp::MeshPrimitive::eTriangles, 0, 126>' requested here
   41 |         MeshletPayload <MeshPrimitive::eTriangles, 0, 126> bad;
      |                                                            ^
In file included from meshlet_payload.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:6:
intrinsics_mesh.hpp:106:16: error: static assertion failed due to requirement '0U > 0': MeshletPayload MaxPrimitives must be > 0
  106 |         static_assert(MaxPrimitives > 0, "MeshletPayload MaxPrimitives must be > 0");
      |                       ^~~~~~~~~~~~~~~~~
meshlet_payload.cpp:46:52: note: in instantiation of template class 'rcgp::MeshletPayload<rcgp::MeshPrimitive::eTriangles, 64, 0>' requested here
   46 |         MeshletPayload <MeshPrimitive::eTriangles, 64, 0> bad;
      |                                                           ^
In file included from meshlet_payload.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:13:
In file included from function_construction.hpp:11:
return_handler.hpp:23:16: error: static assertion failed due to requirement '(rcgp::ShaderStage)1 == rcgp::ShaderStage::eMesh'
   23 |         static_assert(S == ShaderStage::eMesh);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~
function_construction.hpp:62:4: note: in instantiation of function template specialization 'rcgp::return_handler<rcgp::ShaderStage::eVertex, rcgp::MeshPrimitive::eTriangles, 64U, 126U, void>' requested here
   62 |                         return_handler <S> (returns, argi);
      |                         ^
return_handler.hpp:23:18: note: expression evaluates to '1 == 5'
   23 |         static_assert(S == ShaderStage::eMesh);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
return_handler.hpp:23:16: error: static assertion failed due to requirement '(rcgp::ShaderStage)3 == rcgp::ShaderStage::eMesh'
   23 |         static_assert(S == ShaderStage::eMesh);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~
function_construction.hpp:62:4: note: in instantiation of function template specialization 'rcgp::return_handler<rcgp::ShaderStage::eCompute, rcgp::MeshPrimitive::eTriangles, 64U, 126U, void>' requested here
   62 |                         return_handler <S> (returns, argi);
      |                         ^
return_handler.hpp:23:18: note: expression evaluates to '3 == 5'
   23 |         static_assert(S == ShaderStage::eMesh);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
4 errors generated.
#elif defined(__GNUC__)
#if __GNUC__ == 16
In file included from include/rcgp-meta.hpp:6,
                 from include/rcgp.hpp:4,
                 from tests/compile/shader_modules/meshlet_payload.cpp:1:
include/meta/intrinsics_mesh.hpp: In instantiation of 'struct rcgp::MeshletPayload<rcgp::MeshPrimitive::eTriangles, 0, 126>':
tests/compile/shader_modules/meshlet_payload.cpp:41:53:   required from here
   41 |         MeshletPayload <MeshPrimitive::eTriangles, 0, 126> bad;
      |                                                            ^~~
include/meta/intrinsics_mesh.hpp:105:35: error: static assertion failed: MeshletPayload MaxVertices must be > 0
  105 |         static_assert(MaxVertices > 0, "MeshletPayload MaxVertices must be > 0");
      |                       ~~~~~~~~~~~~^~~
  • the comparison reduces to '(0 > 0)'
include/meta/intrinsics_mesh.hpp: In instantiation of 'struct rcgp::MeshletPayload<rcgp::MeshPrimitive::eTriangles, 64, 0>':
tests/compile/shader_modules/meshlet_payload.cpp:46:52:   required from here
   46 |         MeshletPayload <MeshPrimitive::eTriangles, 64, 0> bad;
      |                                                           ^~~
include/meta/intrinsics_mesh.hpp:106:37: error: static assertion failed: MeshletPayload MaxPrimitives must be > 0
  106 |         static_assert(MaxPrimitives > 0, "MeshletPayload MaxPrimitives must be > 0");
      |                       ~~~~~~~~~~~~~~^~~
  • the comparison reduces to '(0 > 0)'
In file included from include/meta/function_construction.hpp:11,
                 from include/rcgp-meta.hpp:13:
include/meta/return_handler.hpp: In instantiation of 'void rcgp::return_handler(MeshletPayload<P, MaxVertices, MaxPrimitives, T>&, size_t&) [with ShaderStage S = rcgp::ShaderStage::eVertex; MeshPrimitive P = rcgp::MeshPrimitive::eTriangles; unsigned int MaxVertices = 64; unsigned int MaxPrimitives = 126; T = void; size_t = long unsigned int]':
include/meta/function_construction.hpp:62:23:   required from 'auto rcgp::trace(auto:97) [with ShaderStage S = rcgp::ShaderStage::eVertex; auto:97 = meshlet_return_in_vertex()::<lambda(ClipPosition)>]'
   62 |                         return_handler <S> (returns, argi);
      |                         ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:98) [with ShaderStage S = rcgp::ShaderStage::eVertex; auto:98 = meshlet_return_in_vertex()::<lambda(ClipPosition)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/meshlet_payload.cpp:27:2:   required from here
   27 |         };
      |         ^
include/meta/return_handler.hpp:23:25: error: static assertion failed
   23 |         static_assert(S == ShaderStage::eMesh);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
  • '(rcgp::ShaderStage::eVertex == rcgp::ShaderStage::eMesh)' evaluates to false
include/meta/return_handler.hpp: In instantiation of 'void rcgp::return_handler(MeshletPayload<P, MaxVertices, MaxPrimitives, T>&, size_t&) [with ShaderStage S = rcgp::ShaderStage::eCompute; MeshPrimitive P = rcgp::MeshPrimitive::eTriangles; unsigned int MaxVertices = 64; unsigned int MaxPrimitives = 126; T = void; size_t = long unsigned int]':
include/meta/function_construction.hpp:62:23:   required from 'auto rcgp::trace(auto:97) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:97 = meshlet_return_in_compute()::<lambda(WorkGroup<1>)>]'
   62 |                         return_handler <S> (returns, argi);
      |                         ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:98) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:98 = meshlet_return_in_compute()::<lambda(WorkGroup<1>)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/meshlet_payload.cpp:36:2:   required from here
   36 |         };
      |         ^
include/meta/return_handler.hpp:23:25: error: static assertion failed
   23 |         static_assert(S == ShaderStage::eMesh);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
  • '(rcgp::ShaderStage::eCompute == rcgp::ShaderStage::eMesh)' evaluates to false
#elif __GNUC__ == 15
In file included from include/rcgp-meta.hpp:6,
                 from include/rcgp.hpp:4,
                 from tests/compile/shader_modules/meshlet_payload.cpp:1:
include/meta/intrinsics_mesh.hpp: In instantiation of 'struct rcgp::MeshletPayload<rcgp::MeshPrimitive::eTriangles, 0, 126>':
tests/compile/shader_modules/meshlet_payload.cpp:41:53:   required from here
   41 |         MeshletPayload <MeshPrimitive::eTriangles, 0, 126> bad;
      |                                                            ^~~
include/meta/intrinsics_mesh.hpp:105:35: error: static assertion failed: MeshletPayload MaxVertices must be > 0
  105 |         static_assert(MaxVertices > 0, "MeshletPayload MaxVertices must be > 0");
      |                       ~~~~~~~~~~~~^~~
include/meta/intrinsics_mesh.hpp:105:35: note: the comparison reduces to '(0 > 0)'
include/meta/intrinsics_mesh.hpp: In instantiation of 'struct rcgp::MeshletPayload<rcgp::MeshPrimitive::eTriangles, 64, 0>':
tests/compile/shader_modules/meshlet_payload.cpp:46:52:   required from here
   46 |         MeshletPayload <MeshPrimitive::eTriangles, 64, 0> bad;
      |                                                           ^~~
include/meta/intrinsics_mesh.hpp:106:37: error: static assertion failed: MeshletPayload MaxPrimitives must be > 0
  106 |         static_assert(MaxPrimitives > 0, "MeshletPayload MaxPrimitives must be > 0");
      |                       ~~~~~~~~~~~~~~^~~
include/meta/intrinsics_mesh.hpp:106:37: note: the comparison reduces to '(0 > 0)'
In file included from include/meta/function_construction.hpp:11,
                 from include/rcgp-meta.hpp:13:
include/meta/return_handler.hpp: In instantiation of 'void rcgp::return_handler(MeshletPayload<P, MaxVertices, MaxPrimitives, T>&, size_t&) [with ShaderStage S = rcgp::ShaderStage::eVertex; MeshPrimitive P = rcgp::MeshPrimitive::eTriangles; unsigned int MaxVertices = 64; unsigned int MaxPrimitives = 126; T = void; size_t = long unsigned int]':
include/meta/function_construction.hpp:62:23:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eVertex; auto:101 = meshlet_return_in_vertex()::<lambda(ClipPosition)>]'
   62 |                         return_handler <S> (returns, argi);
      |                         ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eVertex; auto:102 = meshlet_return_in_vertex()::<lambda(ClipPosition)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/meshlet_payload.cpp:27:2:   required from here
   27 |         };
      |         ^
include/meta/return_handler.hpp:23:25: error: static assertion failed
   23 |         static_assert(S == ShaderStage::eMesh);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
include/meta/return_handler.hpp:23:25: note: '(rcgp::ShaderStage::eVertex == rcgp::ShaderStage::eMesh)' evaluates to false
include/meta/return_handler.hpp: In instantiation of 'void rcgp::return_handler(MeshletPayload<P, MaxVertices, MaxPrimitives, T>&, size_t&) [with ShaderStage S = rcgp::ShaderStage::eCompute; MeshPrimitive P = rcgp::MeshPrimitive::eTriangles; unsigned int MaxVertices = 64; unsigned int MaxPrimitives = 126; T = void; size_t = long unsigned int]':
include/meta/function_construction.hpp:62:23:   required from 'auto rcgp::trace(auto:101) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:101 = meshlet_return_in_compute()::<lambda(WorkGroup<1>)>]'
   62 |                         return_handler <S> (returns, argi);
      |                         ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
include/meta/function_construction.hpp:77:26:   required from 'auto rcgp::operator<<(_fn_tag<S>, auto:102) [with ShaderStage S = rcgp::ShaderStage::eCompute; auto:102 = meshlet_return_in_compute()::<lambda(WorkGroup<1>)>]'
   77 |         auto result = trace <S> (lambda);
      |                       ~~~~~~~~~~^~~~~~~~
tests/compile/shader_modules/meshlet_payload.cpp:36:2:   required from here
   36 |         };
      |         ^
include/meta/return_handler.hpp:23:25: error: static assertion failed
   23 |         static_assert(S == ShaderStage::eMesh);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
include/meta/return_handler.hpp:23:25: note: '(rcgp::ShaderStage::eCompute == rcgp::ShaderStage::eMesh)' evaluates to false
#endif
#endif
